--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,16 @@
 {
     "name": "laravel/laravel",
-    "description": "Laravel Blankapp",
+    "description": "Góndola Server",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "doctrine/dbal": "^2.6",
+        "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.6.*",
+		"guzzlehttp/guzzle": "^6.3",
+        "laravel/framework": "5.7.*",
+		"laravel/passport": "^7.0",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.2.0",
         "maatwebsite/excel": "^3.0"
